# employers-vacancies

./: .gitignore  README.md  config.py  connector.py  interface.py  main.py  pyproject.toml
data/: list_employers.json
src/: connector.py  create_database.py  db_manager.py  work_api.py  work_vac.py
tests/: test_for_vacancies.py
utils/: converter.py  for_employers.py  for_vacancies.py  interface.py  vacancies_employers.py
