[tool.poetry]
name = "work-to-vacancy"
version = "0.1.0"
description = ""
authors = ["KirSouL <Sokil-Ki-So@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dependence.dependencies]
pytest = "^8.3.2"
requests = "^2.32.3"
psycopg2 = "^2.9.9"
tqdm = "^4.66.5"
prettytable = "^3.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
